Face Sets and Masking in Sculpt Mode Not Visible on Meshes Using 'In Front' #76229

Closed
opened 2020-04-29 14:56:43 +02:00 by Steven Babb · 10 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-29 08:26, hash: 839fe335d2
Worked: (newest version of Blender that worked as expected)

Short description of error
Face sets and masking in sculpt mode will not draw on a mesh if the viewport display option 'In Front' is set to true.Face_Sets_Masking_Bug.blend

Exact steps for others to reproduce the error

  1. Insert new object, UV Sphere, for example
  2. Object > Viewport Display > In Front set to True
  3. Enter sculpt mode, try to paint a face set or mask
  4. Nothing will be visible
  5. Uncheck In Front
  6. Mask will be visible
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-29 08:26, hash: `839fe335d2` Worked: (newest version of Blender that worked as expected) **Short description of error** Face sets and masking in sculpt mode will not draw on a mesh if the viewport display option 'In Front' is set to true.[Face_Sets_Masking_Bug.blend](https://archive.blender.org/developer/F8501081/Face_Sets_Masking_Bug.blend) **Exact steps for others to reproduce the error** 1. Insert new object, UV Sphere, for example 2. Object > Viewport Display > In Front set to True 3. Enter sculpt mode, try to paint a face set or mask 4. Nothing will be visible 5. Uncheck In Front 6. Mask will be visible

Added subscriber: @SteveBabb

Added subscriber: @SteveBabb

#78365 was marked as duplicate of this issue

#78365 was marked as duplicate of this issue

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke

This prints Sculpt: Hide, Mask and optimized display disabled in the console. Not sure if that means that this is currently not supported.

This prints `Sculpt: Hide, Mask and optimized display disabled` in the console. Not sure if that means that this is currently not supported.

Added subscriber: @iss

Added subscriber: @iss

In #76229#920172, @JacquesLucke wrote:
This prints Sculpt: Hide, Mask and optimized display disabled in the console. Not sure if that means that this is currently not supported.

I don't get this message, though I am not sure if this is expected behavior.

> In #76229#920172, @JacquesLucke wrote: > This prints `Sculpt: Hide, Mask and optimized display disabled` in the console. Not sure if that means that this is currently not supported. I don't get this message, though I am not sure if this is expected behavior.

Added subscriber: @cheteron

Added subscriber: @cheteron

This issue was referenced by 9f6c98534f

This issue was referenced by 9f6c98534f6ad9b4b03bcfbd60179fdbc28c85fd

This issue was referenced by 8bee200e2f

This issue was referenced by 8bee200e2f4ba82cab51fa479a46e3724f26ecba

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Clément Foucault self-assigned this 2020-07-02 01:41:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76229
There is no content yet.