Fix T76229 Overlay: Sulpt overlay not working if object use in-front option

Simple fix similar to paint overlay.